# controller/coba.go
@@ -44,11 +44,23 @@ func GetPresensi(c *fiber.Ctx) error {
 // @Accept json
 // @Produce json
 // @Success 200 {object} Presensi
-// @Router /presensi [get]
+// @Router /presensi2 [get]
 func GetAllPresensi2(c *fiber.Ctx) error {
 	ps := inimodullatihan.GetAllPresensi(config.Ulbimongoconn2, "presensi")
 	return c.JSON(ps)
 }
+// GetPresensiID godoc
+// @Summary Get By ID Data Presensi.
+// @Description Ambil per ID data presensi.
+// @Tags Presensi
+// @Accept json
+// @Produce json
+// @Param id path string true "Masukan ID"
+// @Success 200 {object} Presensi
+// @Failure 400
+// @Failure 404
+// @Failure 500
+// @Router /presensi2/{id} [get]
 func GetPresensiID(c *fiber.Ctx) error {
 	id := c.Params("id")
 	if id == "" {
