# docs/swagger.json
@@ -17,7 +17,7 @@
     "host": "ws-fatwa.herokuapp.com",
     "basePath": "/",
     "paths": {
-        "/presensi": {
+        "/presensi2": {
             "get": {
                 "description": "Mengambil semua data presensi.",
                 "consumes": [
@@ -36,6 +36,47 @@
                         "schema": {
                             "$ref": "#/definitions/controller.Presensi"
                         }
+                    }
+                }
+            }
+        },
+        "/presensi2/{id}": {
+            "get": {
+                "description": "Ambil per ID data presensi.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Presensi"
+                ],
+                "summary": "Get By ID Data Presensi.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Masukan ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Presensi"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
